--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  logger: ^1.0.0
+  path_provider: ^2.0.2
+  share_plus: ^2.1.4
+  sensors_plus: ^1.0.2
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-flutter:
+  test: ^1.3.0
