--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   logger: ^1.1.0
-  path_provider: ^2.0.10
-  share_plus: ^4.0.4
-  sensors_plus: ^1.3.1
+  path_provider: ^2.0.11
+  share_plus: ^4.0.10+1
+  sensors_plus: ^1.3.4+1
 dev_dependencies:
   test: ^1.3.0
