--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   logger: ^1.1.0
   path_provider: ^2.0.11
-  share_plus: ^4.0.10+1
-  sensors_plus: ^1.3.4+1
+  share_plus: ^6.2.0
+  sensors_plus: ^2.0.1
 dev_dependencies:
   test: ^1.3.0
