--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.18.0
   logger: ^1.1.0
   path_provider: ^2.0.11
   share_plus: ^6.2.0
