--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,16 @@ version: 0.1.0
 homepage: https://github.com/ahmetcj4/logger_flutter_ns/
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.18.0 <4.0.0"
+  flutter: ">=3.3.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.0
-  logger: ^1.1.0
-  path_provider: ^2.0.11
-  share_plus: ^6.2.0
-  sensors_plus: ^2.0.1
+  intl: ^0.18.1
+  logger: ^1.4.0
+  path_provider: ^2.0.15
+  share_plus: ^7.0.2
+  sensors_plus: ^3.0.2
 dev_dependencies:
   test: ^1.3.0
